--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -1,8 +1,8 @@
 <head>
     <link rel="shortcut icon" type="image/x-icon" href="{{ site.baseurl }}/assets/images/favicon.ico">
-    <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/style.css?v={{ site.github.build_revision }}">
 
-    <script src="{{ '/assets/js/scale.fix.js' | relative_url }}"></script>
+    <script src="{{ site.baseurl }}/assets/js/scale.fix.js"></script>
     <script defer data-domain="rzuckerm.github.io/sample-programs-website-copy" src="https://plausible.io/js/plausible.js"></script>
 
     {% feed_meta %}
