--- a/docs/_includes/navigation.html
+++ b/docs/_includes/navigation.html
@@ -1,7 +1,7 @@
 <nav class="top-nav">
     <ul>
-        <li><a href="{{ site.url }}" id="home">Home</a></li>
-        <li><a href="{{ site.url }}/languages/" id="lang">Languages</a></li>
-        <li><a href="{{ site.url }}/projects/" id="proj">Projects</a></li>
+        <li><a href="{{ site.baseurl }}" id="home">Home</a></li>
+        <li><a href="{{ site.baseurl }}/languages/" id="lang">Languages</a></li>
+        <li><a href="{{ site.baseurl }}/projects/" id="proj">Projects</a></li>
     </ul>
 </nav>
