--- a/docs/_includes/breadcrumb.html
+++ b/docs/_includes/breadcrumb.html
@@ -1,6 +1,6 @@
 <nav class="site-navigation">
     <ol class="breadcrumb">
-        <li><a href="{{ site.url }}/">Home</a></li>
+        <li><a href="{{ site.baseurl }}/">Home</a></li>
         {% capture page_url_without_index_html %}{{ page.url | remove: "/index.html" }}{% endcapture %}
         {% assign splitted_url_parts = page_url_without_index_html | split: '/' %}
         {% capture forLoopMaxInt %}{{ splitted_url_parts.size | minus:1 }}{% endcapture %}
@@ -14,7 +14,7 @@
         <li {% if i==j %}class="active" {% endif %}>
             {% capture breadcrumb_page_page_url_without_index_html %}{{ breadcrumb_page.url | remove: "index.html" }}{%
             endcapture %}
-            <a href="{{ site.url }}{{breadcrumb_page_page_url_without_index_html}}">{{breadcrumb_page.title}}</a>
+            <a href="{{ site.baseurl }}{{breadcrumb_page_page_url_without_index_html}}">{{breadcrumb_page.title}}</a>
         </li>
         {% endif %}
         {% endfor %}
