--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -4,6 +4,7 @@
 
     <script src="{{ site.url }}/assets/js/scale.fix.js"></script>
     <script defer data-domain="rzuckerm.github.io/sample-programs-website-copy" src="https://plausible.io/js/plausible.js"></script>
+    <script src="{{ site.url }}/assets/js/jquery-3.7.0.min.js"></script>
 
     {% feed_meta %}
     {% include twitter_card.html %}
