Add skeleton for image titling in Javascript

--- a/docs/_includes/featured_image.html
+++ b/docs/_includes/featured_image.html
@@ -1,7 +1,13 @@
-<p>
+<div class="featured-image">
   {% if include.image %}
   <img src="{{ site.url }}/assets/images/generated/{{ include.image }}" alt="{{ include.name }}">
   {% else %}
   <img src="{{ site.url }}/assets/images/generated/sample-programs-in-every-language.jpg" alt="{{ include.name }}">
   {% endif %}
-</p>
+  <div class="title-line">
+    <div class="image-title"></div>
+  </div>
+  <div class="title-line">
+    <div class="image-title"></div>
+  </div>
+</div>
