--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -8,6 +8,11 @@ $brand-color: #c90229;
 
 @import "{{ site.theme }}";
 
+@font-face {
+  font-family: "Bernard HC";
+  src: url("../fonts/BERNHC.TTF");
+}
+
 sup {
   vertical-align: super;
   font-size: smaller;
@@ -103,6 +108,31 @@ section {
 img {
   max-width: 95%;
 }
+
+.featured-image {
+  position: relative;
+  width: 100%;
+}
+
+.featured-image img {
+  padding: 0px;
+  margin: 0px;
+  border: 0px;
+  max-width: 100%;
+}
+
+.image-title {
+  background-color: $header-bg-color;
+  color: white;
+  font-family: "Bernard HC";
+  text-align: right;
+}
+
+.title-line {
+  position: absolute;
+  right: 0px;
+}
+
 
 @media print, screen and (max-width: 1200px) {
 
