Use Javascript to provide image titles

--- a/docs/_includes/featured_image.html
+++ b/docs/_includes/featured_image.html
@@ -4,10 +4,11 @@
   {% else %}
   <img src="{{ site.url }}/assets/images/generated/sample-programs-in-every-language.jpg" alt="{{ include.name }}">
   {% endif %}
-  <div class="title-line">
+  <div class="image-container" id="title1">
     <div class="image-title"></div>
   </div>
-  <div class="title-line">
+  <div class="image-container" id="title2">
     <div class="image-title"></div>
   </div>
 </div>
+<p></p>
