Refine Javascript image titler

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -131,6 +131,8 @@ img {
   color: white;
   font-family: "Bernard HC";
   text-align: right;
+  padding-top: 0px;
+  padding-bottom: 0px;
 }
 
 @media print, screen and (max-width: 1200px) {
